epics-msi-substitution/test/corpus/db_template.txt
=============
Simple quoted
=============

file "myDBfile.template" {
    pattern { PREFIX,     SCAN }
            { "P" "1 second"}
            { "P" "3 second"}
}

---

(source_file
 (db_template
  (string (quoted_string (quoted_string_text_fragment)))
  (substitutions
   (pattern
	(pattern_variables (identifier) (identifier))
	(pattern_values
	 (string (quoted_string (quoted_string_text_fragment)))
	 (string (quoted_string (quoted_string_text_fragment))))
	(pattern_values
	 (string (quoted_string (quoted_string_text_fragment)))
	 (string (quoted_string (quoted_string_text_fragment))))))))

===============
Simple unquoted
===============

file myDBfile.template {
    pattern { PREFIX,     SCAN }
            { "P" "1 second"}
            { "P" "3 second"}
}

---

(source_file
 (db_template
  (string)
  (substitutions
   (pattern
	(pattern_variables (identifier) (identifier))
	(pattern_values
	 (string (quoted_string (quoted_string_text_fragment)))
	 (string (quoted_string (quoted_string_text_fragment))))
	(pattern_values
	 (string (quoted_string (quoted_string_text_fragment)))
	 (string (quoted_string (quoted_string_text_fragment))))))))
